matomo/generated/matomo/templates/deployment.yaml
---
# Source: matomo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  labels:
    app.kubernetes.io/name: matomo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: matomo
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matomo
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: matomo
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      priorityClassName: ""
      automountServiceAccountToken: true
      # yamllint disable rule:indentation
      hostAliases:
        - hostnames:
          - status.localhost
          ip: 127.0.0.1
        - hostnames:
          - matomo.org
          ip: 8.8.8.8
      # yamllint enable rule:indentation
      containers:
        - name: matomo
          image: matomo
          imagePullPolicy: "Never"
          resources:
            limits:
              cpu: 100m
              memory: 6Gi
            requests:
              cpu: 1m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          livenessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: matomo-data
              mountPath: /bitnami/matomo
      volumes:
        - name: matomo-data
          persistentVolumeClaim:
            claimName: matomo-matomo
