matomo/generated/matomo/templates/svc.yaml
---
# Source: matomo/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app.kubernetes.io/name: matomo
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: null
    - name: https
      port: 8443
      targetPort: https
      nodePort: null
  selector:
    app.kubernetes.io/name: matomo
